[package]
name = "csvs_convert"
version = "0.12.0"
edition = "2021"

description = "Some Datapackage Conversion"
license = "MIT"
repository = "https://github.com/kindly/csvs_convert"
homepage = "https://github.com/kindly/csvs_convert"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = { version = "0.4.38", default-features = false }
serde_json = { version = "1", features = ["preserve_order"] }
csv = "1.3.0"
snafu = "0.8.4"
tempfile = "3"
walkdir = "2.5.0"
pathdiff = "0.2.1"
petgraph = { version = "0.6.5", default-features = false, features = [
  "graphmap",
] }
typed-builder = "0.20"
lazy_static = "1.5.0"
regex = { version = "1" }
thiserror = "2"
pdatastructs = { version = "0.7.0", features = [
  "rand",
  "bytecount",
  "num-traits",
  "fixedbitset",
], default-features = false }
streaming-stats = "0.2.3"
counter = "0.6.0"
crossbeam-channel = "0.5.13"
csv-index = "0.1.6"
threadpool = "1.8.1"
log = "0.4.20"

parquet = { version = "54.3.1", default-features = false, features = ["arrow", "snap"], optional = true }
arrow = { version = "54.3.1", default-features = false, features = ["csv"], optional = true }
spreadsheet-ods = "0.25"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
postgres = "0.19.8"
minijinja = { version = "2.2.0" }
zip = { version = "4", default-features = false, features = ["deflate"] }
rusqlite = { version = "0.35", features = ["bundled"] }
rand = "0.9"
rust_xlsxwriter = { version = "0.87.0", features = ["constant_memory"] }

[profile.bench]
debug = true

[dev-dependencies]
assert-json-diff = "2.0.2"
insta = { version = "1.39.0", features = ["redactions", "yaml"] }

[features]
default = ["parquet", "converters"]
parquet = ["dep:parquet", "dep:arrow"]
converters = []
