[package]
name = "csvs_convert"
version = "0.13.1"
edition = "2024"

description = "Some Datapackage Conversion"
license = "MIT"
repository = "https://github.com/kindly/csvs_convert"
homepage = "https://github.com/kindly/csvs_convert"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = { version = "0.4.44", default-features = false }
serde_json = { version = "1", features = ["preserve_order"] }
csv = "1.4.0"
snafu = "0.9"
tempfile = "3"
walkdir = "2.5.0"
pathdiff = "0.2.3"
petgraph = { version = "0.8", default-features = false, features = [
  "graphmap",
] }
typed-builder = "0.23"
lazy_static = "1.5.0"
regex = { version = "1" }
thiserror = "2"
pdatastructs = { version = "0.7.0", features = [
  "rand",
  "bytecount",
  "num-traits",
  "fixedbitset",
], default-features = false }
qsv-stats = "0.50"
counter = "0.7.1"
crossbeam-channel = "0.5.15"
csv-index = "0.1.6"
threadpool = "1.8.1"
log = "0.4.30"

parquet = { version = "58.3.0", default-features = false, features = ["arrow", "snap"], optional = true }
arrow = { version = "58.3.0", default-features = false, features = ["csv"], optional = true }
spreadsheet-ods = "1.0.4"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
postgres = "0.19.13"
minijinja = { version = "2.20.0" }
zip = { version = "8", default-features = false, features = ["deflate"] }
rusqlite = { version = "0.40", features = ["bundled"] }
rand = "0.10"
rust_xlsxwriter = { version = "0.95.0", features = ["constant_memory"] }

[profile.bench]
debug = true

[dev-dependencies]
assert-json-diff = "2.0.2"
insta = { version = "1.39.0", features = ["redactions", "yaml"] }
temp-env = "0.3.6"

[features]
default = ["parquet", "converters"]
parquet = ["dep:parquet", "dep:arrow"]
converters = []
